--- a/index.html
+++ b/index.html
@@ -11,18 +11,16 @@
     <div class="wrapper">
     <div class="container">
       <header>
-        <h1 class="name">jlord</h1>
+        <h1 class="name">bhaynie03</h1>
       </header>
       <article>
-        <p>I'm an <a href="http://en.wikipedia.org/wiki/Open-source_software" target="_blank">open source</a> developer and designer living in Oakland, California. Far, far away from my <a href="http://en.wikipedia.org/wiki/Central_Georgia" target="_blank">East Coast US roots</a>. I work at <a href="http://www.github.com/about" target="_blank">GitHub</a>, mentor at programming events (<a href="http://www.nodeschool.io">NodeSchool.io</a>, <a href="https://github.com/blog/1805-patchwork-night" target="_blank">Patchwork</a>) and do some conferences, too.</p>
-        <p> Previously I was an <a href="http://www.bostonredevelopmentauthority.org" target="_blank">urban designer</a>, but the call of the wild open tech world would win me over.</p>
+        <p>I am a self taught <a href="https://en.wikipedia.org/wiki/Web_developer" target="_blank"> Web Developer</a> and I'm excited to get familiar with <a href="https://en.wikipedia.org/wiki/Git" target="_blank">. I have a few websites up and running already. <a href="http://wizards-workshop.org/" target="_blank"> Wizards-Workshop</a> is my personal website with several features like a recipe database, flashcards, and notepad system. <a href="http://braynie.org/" target="_blank">Braynie.org</a> is a workout program I updated to be online and more functional than paper and pencil could afford. Someday I want to get into AI development. And here's one small step in that direction.</p> 
       </article>
 
     <footer>
       <ul class="meta inline-list">
-        <li><a href="mailto:to.jlord@gmail.com">to.jlord@gmail.com</a></li>
-        <li><a href="http://www.twitter.com/jllord" target="_blank">twitter/jllord</a></li>
-        <li><a href="http://www.github.com/jlord" target="_blank">github/jlord</a></li>
+        <li><a href="mailto:to.brad.haynie03@gmail.com">to.brad.haynie03@gmail.com</a></li>
+        <li><a href="http://www.github.com/bhaynie03" target="_blank">github/bhaynie03</a></li>
       </ul>
     </footer>
   </div>
